fixed links, added first-reveal animations

--- a/src/html/footer.html
+++ b/src/html/footer.html
@@ -10,17 +10,13 @@
       </h2>
 
       <div class="footer-icon-wrapper" data-reveal>
-        <div class="icon-wrapper">
-          <a data-href="https://github.com/Gearonix"></a>
+        <div class="icon-wrapper" data-href="https://github.com/Gearonix">
           <img src="img/github.svg"></div>
-        <div class="icon-wrapper">
-          <a data-href="https://t.me/gearonixx"></a>
+        <div class="icon-wrapper" data-href="https://t.me/gearonixx">
           <img src="img/telegram.svg"></div>
-        <div class="icon-wrapper">
-          <a data-href="https://wa.me/80264942003"></a>
+        <div class="icon-wrapper" data-href="https://wa.me/80264942003">
           <img src="img/whatsapp.svg"></div>
-        <div class="icon-wrapper">
-          <a data-href="https://vk.com/id606417601"></a>
+        <div class="icon-wrapper" data-href="https://vk.com/id606417601">
           <img src="img/vk.svg">
         </div>
       </div>
@@ -44,7 +40,7 @@
     <div class="container">
 
       <a data-href="#home" class="logo">
-        <img alt="Richard home" height="40" loading="lazy" src="img/logo-dark.png" width="40">
+        <img height="40" loading="lazy" src="img/logo-dark.png" width="40">
       </a>
 
       <ul class="social-list">
@@ -65,6 +61,7 @@
 
       <a class="copyright" data-href="#home">Egor Uzhanin</a>
 
+      <span class="secret">-.. .- -. .-.- .-.. --- ....</span>
     </div>
   </div>
 
