--- a/src/html/main.html
+++ b/src/html/main.html
@@ -2,12 +2,13 @@
 <section class="section hero" id="home" aria-label="home">
   <div class="container">
 
-    <img src="img/avatar.jpg" width="322" height="322" alt="" class="hero-banner">
+    <img src="img/avatar.jpg" width="322" height="322" alt="Gearonix"
+         class="hero-banner" data-fisrt-reveal="right">
     <div class="hero-content">
 
-      <h1 class="h1 hero-title">Uzhanin Egor</h1>
+      <h1 class="h1 hero-title" data-fisrt-reveal="left">Uzhanin Egor</h1>
 
-      <div class="wrapper h2">
+      <div class="wrapper h2" data-fisrt-reveal="left">
         <strong class="strong" data-letter-effect>Frontend</strong>
         <strong class="strong" data-letter-effect>Javascript</strong>
         <strong class="strong" data-letter-effect>React.js</strong>
@@ -16,27 +17,23 @@
         <strong class="strong" data-letter-effect>Typescript</strong>
       </div>
 
-      <p class="hero-text">16 year old developer</p>
+      <p class="hero-text" data-fisrt-reveal="opacity">Web developer</p>
     </div>
-    <div class="hero__contacts">
-      <div class="hero__contact">
-        <a data-href="https://github.com/Gearonix"></a>
+    <div class="hero__contacts" data-fisrt-reveal="left">
+      <div class="hero__contact" data-href="https://github.com/Gearonix">
         <img src="img/github.svg"/>
         <h4>Gearonix</h4>
       </div>
 
-      <div class="hero__contact">
-        <a data-href="https://t.me/gearonixx"></a>
+      <div class="hero__contact" data-href="https://t.me/gearonixx">
         <img src="img/telegram.svg"/>
         <h4>@gearonixx</h4>
       </div>
-      <div class="hero__contact">
-        <a data-href="mailto://egor.uzhanin@gmail.com"></a>
+      <div class="hero__contact" data-href="mailto://egor.uzhanin@gmail.com">
         <img src="img/email.svg"/>
         <h4>egor.uzhanin@gmail.com</h4>
       </div>
-      <div class="hero__contact">
-        <a data-href="https://vk.com/id606417601"></a>
+      <div class="hero__contact" data-href="https://vk.com/id606417601">
         <img src="img/vk.svg"/>
         <h4>Uzhanin Egor</h4>
       </div>
