--- a/src/html/portfolio.html
+++ b/src/html/portfolio.html
@@ -6,24 +6,20 @@
         <div class="portfolio-list">
 
             <div class="portfolio-wrapper">
-                <div class="portfolio-card adonis-ecommerce" data-reveal="left">
-                    <a data-href="adonis-ecommerce"></a>
+                <div class="portfolio-card adonis-ecommerce" data-reveal="left" data-href="adonis-ecommerce">
                     <div class="card-image-background"></div>
                     <div class="card-text">
                         <h3>Adonis Ecommerce</h3>
                         <p>FullStack e-commerce app build on Next.js/Nest.js</p>
                     </div>
-                    <div class="card-github">
-                        <a data-href="https://github.com/Gearonix/Adonis-Ecommerce">
-                            <img src="img/github.png">
-                        </a>
+                    <div class="card-github" data-href="https://github.com/Gearonix/Adonis-Ecommerce">
+                            <img src="img/github.svg">
                     </div>
                 </div>
                 <div class="portfolio-card-block" data-reveal="right">
                     <h5 class="portfolio-card-subtitle">FullStack Project</h5>
                     <h3 class="portfolio-card-title">Adonis Ecommerce</h3>
-                    <div class="portfolio-card-description">
-                        <a data-href="adonis-ecommerce"></a>
+                    <div class="portfolio-card-description" data-href="https://github.com/Gearonix/Adonis-Ecommerce">
                         <p>
                             <em>E-commerce platform</em> with authorization,
                             messenger, comments and more,
@@ -59,12 +55,10 @@
                         <span>SCSS</span>
                     </div>
                     <div class="portfolio-card-icons">
-                        <div class="portfolio-card-icon">
-                            <a data-href="https://github.com/Gearonix/Adonis-Ecommerce"></a>
+                        <div class="portfolio-card-icon" data-href="https://github.com/Gearonix/Adonis-Ecommerce">
                             <img src="img/github.svg">
                         </div>
-                        <div class="portfolio-card-icon">
-                            <a data-href="adonis-ecommerce"></a>
+                        <div class="portfolio-card-icon" data-href="adonis-ecommerce">
                             <img src="img/link.svg">
                         </div>
                     </div>
@@ -74,8 +68,7 @@
                 <div class="portfolio-card-block" data-reveal="right">
                     <h5 class="portfolio-card-subtitle">FullStack Project</h5>
                     <h3 class="portfolio-card-title">Space Calendar</h3>
-                    <div class="portfolio-card-description">
-                        <a data-href="space-calendar"></a>
+                    <div class="portfolio-card-description" data-href="https://github.com/Gearonix/Space-Calendar">
                         <p>
                             <em>Calendar</em> with the ability to plan your day
                             built on <em>React.js</em>/<em>Express.js</em>.
@@ -101,27 +94,22 @@
                         <span>React-Spring</span>
                     </div>
                     <div class="portfolio-card-icons">
-                        <div class="portfolio-card-icon">
-                            <a data-href="https://github.com/Gearonix/Space-Calendar"></a>
+                        <div class="portfolio-card-icon" data-href="https://github.com/Gearonix/Space-Calendar">
                             <img src="img/github.svg">
                         </div>
-                        <div class="portfolio-card-icon">
-                            <a data-href="space-calendar"></a>
+                        <div class="portfolio-card-icon" data-href="space-calendar">
                             <img src="img/link.svg">
                         </div>
                     </div>
                 </div>
-                <div class="portfolio-card space-calendar" data-reveal="left">
-                    <a data-href="space-calendar"></a>
+                <div class="portfolio-card space-calendar" data-reveal="left" data-href="space-calendar">
                     <div class="card-image-background"></div>
                     <div class="card-text">
                         <h3>Space Calendar</h3>
                         <p>Calendar with the ability to plan your day.</p>
                     </div>
-                    <div class="card-github">
-                        <a data-href="https://github.com/Gearonix/Space-Calendar">
+                    <div class="card-github" data-href="https://github.com/Gearonix/Space-Calendar">
                             <img src="img/github.svg">
-                        </a>
                     </div>
                 </div>
             </div>
