--- a/src/html/about.html
+++ b/src/html/about.html
@@ -2,7 +2,7 @@
 <section class="section about" id="about" aria-label="about me">
   <div class="container">
 
-    <div class="about-content">
+    <div class="about__content">
 
       <h2 class="h2 section-title" data-reveal="right">
         Hello! I’m <br>
@@ -23,11 +23,11 @@
 
     </div>
 
-    <figure class="about-banner" data-reveal="left">
+    <figure class="about__banner" data-reveal="left">
 
       <div class="img-holder has-before" style="--width: 900; --height: 600;">
-        <img alt="Riachard Ryan" class="img-cover"
-             src="img/about-image.png">
+        <img class="img-cover"
+             src="_static/images/about.png">
       </div>
     </figure>
   </div>
