--- a/src/html/footer.html
+++ b/src/html/footer.html
@@ -1,6 +1,6 @@
 <footer class="footer">
 
-  <div class="footer-top section" id="contact">
+  <div class="footer__top section" id="contact">
     <div class="container">
 
       <p class="section-subtitle" data-reveal>Contact me</p>
@@ -9,41 +9,40 @@
         Send me a message.
       </h2>
 
-      <div class="footer-icon-wrapper" data-reveal>
-        <div class="icon-wrapper" data-href="https://github.com/Gearonix">
-          <img src="img/github.svg"></div>
-        <div class="icon-wrapper" data-href="https://t.me/gearonixx">
-          <img src="img/telegram.svg"></div>
-        <div class="icon-wrapper" data-href="https://wa.me/80264942003">
-          <img src="img/whatsapp.svg"></div>
-        <div class="icon-wrapper" data-href="https://vk.com/id606417601">
-          <img src="img/vk.svg">
+      <div class="footer__icon-wrapper" data-reveal>
+        <div class="footer__icon" data-href="https://github.com/Gearonix">
+          <img src="_static/images/icons/github.svg"></div>
+        <div class="footer__icon" data-href="https://t.me/gearonixx">
+          <img src="_static/images/icons/telegram.svg"></div>
+        <div class="footer__icon" data-href="https://wa.me/80264942003">
+          <img src="_static/images/icons/whatsapp.svg"></div>
+        <div class="footer__icon" data-href="https://vk.com/id606417601">
+          <img src="_static/images/icons/vk.svg">
         </div>
       </div>
 
-      <img src="img/hero-guy-5.png" width="159" height="176" loading="lazy" alt="photography"
+      <img src="_static/images/people/hero-guy-5.png" width="159" height="176"
            class="abs-img abs-img-1" data-reveal>
 
-      <img src="img/hero-guy-2.png" width="265" height="275" loading="lazy" alt="photography"
+      <img src="_static/images/people/hero-guy-2.png" width="265" height="275"
            class="abs-img abs-img-2" data-reveal>
 
-      <img src="img/hero-guy-3.png" width="303" height="272" loading="lazy" alt="photography"
+      <img src="_static/images/people/hero-guy-3.png" width="303" height="272"
            class="abs-img abs-img-3" data-reveal>
 
-      <img src="img/hero-guy-1.png" width="175" height="175" loading="lazy" alt="photography"
+      <img src="_static/images/people/hero-guy-1.png" width="175" height="175"
            class="abs-img abs-img-4" data-reveal>
 
     </div>
   </div>
 
-  <div class="footer-bottom">
+  <div class="footer__bottom">
     <div class="container">
-
       <a data-href="#home" class="logo">
-        <img height="40" loading="lazy" src="img/logo-dark.png" width="40">
+        <img height="40" loading="lazy" src="_static/images/logo/logo-dark.png" width="40">
       </a>
 
-      <ul class="social-list">
+      <ul class="footer__social-list">
 
         <li>
           <a data-href="https://t.me/gearonixx" class="social-link">Telegram.</a>
