--- a/src/html/header.html
+++ b/src/html/header.html
@@ -2,72 +2,22 @@
   <div class="container">
 
     <a data-href="#home" class="logo">
-      <img alt="Richard home" height="40" src="img/logo-dark.png" width="40">
+      <img height="40" src="_static/images/logo/logo-dark.png" width="40">
     </a>
 
-    <div class="navbar-buttons">
-      <button class="nav-icon-btn" aria-label="open menu" data-href="#portfolio">
-        <img src="img/link.svg">
+    <div class="header__buttons">
+      <button class="header__btn" aria-label="open menu" data-href="#portfolio">
+        <img src="_static/images/icons/link.svg">
       </button>
-      <button class="nav-icon-btn" aria-label="open menu" data-href="https://t.me/gearonixx">
-        <img src="img/telegram.svg">
+      <button class="header__btn" aria-label="open menu" data-href="https://t.me/gearonixx">
+        <img src="_static/images/icons/telegram.svg">
       </button>
-      <button class="nav-icon-btn" aria-label="open menu" data-href="https://github.com/Gearonix">
-        <img src="img/github.svg">
+      <button class="header__btn" aria-label="open menu" data-href="https://github.com/Gearonix">
+        <img src="_static/images/icons/github.svg">
       </button>
-      <button class="nav-open-btn" aria-label="open menu" data-nav-open>
-        <span class="material-icons">more_horiz</span>
+      <button class="header__btn" data-nav-open>
+        <img src="_static/images/icons/menu.svg">
       </button>
     </div>
-
-
   </div>
 </header>
-
-<nav class="navbar" data-navbar>
-
-  <div class="navbar-top">
-    <a data-href="#home" class="logo" data-nav-close>
-      <img src="img/logo-dark-big.png" width="180"
-           height="65" alt="Uzhanin Egor" class="img">
-    </a>
-
-    <button class="nav-close-btn" aria-label="close menu" data-nav-close>
-      <img src="img/cross.svg">
-    </button>
-
-
-  </div>
-
-  <ul class="navbar-list">
-
-    <li class="navbar-item">
-      <a data-href="#home" class="navbar-link" data-nav-close>Home</a>
-    </li>
-
-    <li class="navbar-item">
-      <a data-href="#about" class="navbar-link" data-nav-close>About</a>
-    </li>
-
-    <li class="navbar-item">
-      <a data-href="#portfolio" class="navbar-link" data-nav-close>Portfolio</a>
-    </li>
-
-    <li class="navbar-item">
-      <a data-href="#contact" class="navbar-link" data-nav-close>Contact me</a>
-    </li>
-
-  </ul>
-  <p class="navbar-title">My Address</p>
-
-  <address class="navbar-text">
-    Mytishchi, Rozhdestvenskaya 3
-  </address>
-  <p class="navbar-title">Contact me</p>
-  <p class="navbar-text">
-    <a data-href="tel:79264942003" class="contact-link">+7 926 494 2003</a>
-  </p>
-
-</nav>
-
-<div class="overlay" data-nav-close data-overlay></div>
