--- a/src/html/portfolio.html
+++ b/src/html/portfolio.html
@@ -3,23 +3,23 @@
         <h2 class="h2 section-title" id="portfolio-label" data-reveal>My Projects</h2>
         <p class="section-description" data-reveal>My projects are mostly large web applications <br/>
             made using modern technologies.</p>
-        <div class="portfolio-list">
+        <div class="portfolio__list">
 
-            <div class="portfolio-wrapper">
-                <div class="portfolio-card adonis-ecommerce" data-reveal="left" data-href="adonis-ecommerce">
-                    <div class="card-image-background"></div>
-                    <div class="card-text">
+            <div class="portfolio__wrapper">
+                <div class="portfolio__card adonis-ecommerce" data-reveal="left" data-href="adonis-ecommerce">
+                    <div class="portfolio__card-background"></div>
+                    <div class="portfolio__card-text">
                         <h3>Adonis Ecommerce</h3>
                         <p>FullStack e-commerce app build on Next.js/Nest.js</p>
                     </div>
-                    <div class="card-github" data-href="https://github.com/Gearonix/Adonis-Ecommerce">
-                            <img src="img/github.svg">
+                    <div class="portfolio__card-github" data-href="https://github.com/Gearonix/Adonis-Ecommerce">
+                            <img src="_static/images/icons/github.svg">
                     </div>
                 </div>
-                <div class="portfolio-card-block" data-reveal="right">
-                    <h5 class="portfolio-card-subtitle">FullStack Project</h5>
-                    <h3 class="portfolio-card-title">Adonis Ecommerce</h3>
-                    <div class="portfolio-card-description" data-href="https://github.com/Gearonix/Adonis-Ecommerce">
+                <div class="portfolio__card-block" data-reveal="right">
+                    <h5 class="portfolio__card-subtitle">FullStack Project</h5>
+                    <h3 class="portfolio__card-title">Adonis Ecommerce</h3>
+                    <div class="portfolio__card-description" data-href="https://github.com/Gearonix/Adonis-Ecommerce">
                         <p>
                             <em>E-commerce platform</em> with authorization,
                             messenger, comments and more,
@@ -31,12 +31,12 @@
                             Sliced Design</em>. Be sure to check out <em>Github</em> for a
                             complete understanding of the project!
                         </p>
-                        <div class="portfolio-card-time">
-                            <img src="img/clock.svg">
+                        <div class="portfolio__card-time">
+                            <img src="_static/images/icons/clock.svg">
                             <span>3 months</span>
                         </div>
                     </div>
-                    <div class="portfolio-card-tags">
+                    <div class="portfolio__card-tags">
                         <span>Next.js</span>
                         <span>Nest.js</span>
                         <span>Typescript</span>
@@ -54,21 +54,21 @@
                         <span>Feature-Sliced-Design</span>
                         <span>SCSS</span>
                     </div>
-                    <div class="portfolio-card-icons">
-                        <div class="portfolio-card-icon" data-href="https://github.com/Gearonix/Adonis-Ecommerce">
-                            <img src="img/github.svg">
+                    <div class="portfolio__card-icons">
+                        <div class="portfolio__card-icon" data-href="https://github.com/Gearonix/Adonis-Ecommerce">
+                            <img src="_static/images/icons/github.svg">
                         </div>
-                        <div class="portfolio-card-icon" data-href="adonis-ecommerce">
-                            <img src="img/link.svg">
+                        <div class="portfolio__card-icon" data-href="adonis-ecommerce">
+                            <img src="_static/images/icons/link.svg">
                         </div>
                     </div>
                 </div>
             </div>
-            <div class="portfolio-wrapper to-left">
-                <div class="portfolio-card-block" data-reveal="right">
-                    <h5 class="portfolio-card-subtitle">FullStack Project</h5>
-                    <h3 class="portfolio-card-title">Space Calendar</h3>
-                    <div class="portfolio-card-description" data-href="https://github.com/Gearonix/Space-Calendar">
+            <div class="portfolio__wrapper to-left">
+                <div class="portfolio__card-block" data-reveal="right">
+                    <h5 class="portfolio__card-subtitle">FullStack Project</h5>
+                    <h3 class="portfolio__card-title">Space Calendar</h3>
+                    <div class="portfolio__card-description" data-href="https://github.com/Gearonix/Space-Calendar">
                         <p>
                             <em>Calendar</em> with the ability to plan your day
                             built on <em>React.js</em>/<em>Express.js</em>.
@@ -77,12 +77,12 @@
                             changing the background of tasks and the user's avatar. Beautiful
                             animations. My first full stack project.
                         </p>
-                        <div class="portfolio-card-time">
-                            <img src="img/clock.svg">
+                        <div class="portfolio__card-time">
+                            <img src="_static/images/icons/clock.svg">
                             <span>1 month</span>
                         </div>
                     </div>
-                    <div class="portfolio-card-tags">
+                    <div class="portfolio__card-tags">
                         <span>React.js</span>
                         <span>Express.js</span>
                         <span>Typescript</span>
@@ -93,39 +93,39 @@
                         <span>Material-UI</span>
                         <span>React-Spring</span>
                     </div>
-                    <div class="portfolio-card-icons">
+                    <div class="portfolio__card-icons">
                         <div class="portfolio-card-icon" data-href="https://github.com/Gearonix/Space-Calendar">
-                            <img src="img/github.svg">
+                            <img src="_static/images/icons/github.svg">
                         </div>
                         <div class="portfolio-card-icon" data-href="space-calendar">
-                            <img src="img/link.svg">
+                            <img src="_static/images/icons/link.svg">
                         </div>
                     </div>
                 </div>
-                <div class="portfolio-card space-calendar" data-reveal="left" data-href="space-calendar">
-                    <div class="card-image-background"></div>
-                    <div class="card-text">
+                <div class="portfolio__card space-calendar" data-reveal="left" data-href="space-calendar">
+                    <div class="portfolio__card-background"></div>
+                    <div class="portfolio__card-text">
                         <h3>Space Calendar</h3>
                         <p>Calendar with the ability to plan your day.</p>
                     </div>
-                    <div class="card-github" data-href="https://github.com/Gearonix/Space-Calendar">
-                            <img src="img/github.svg">
+                    <div class="portfolio__card-github" data-href="https://github.com/Gearonix/Space-Calendar">
+                            <img src="_static/images/icons/github.svg">
                     </div>
                 </div>
             </div>
 
         </div>
-        <div class="portfolio__addon-1">
-            <div class="eye-wrapper" data-reveal>
-                <div class="eye" data-eye>
-                    <div class="eye-iris green">
-                        <div class="eye-lens"></div>
+        <div class="portfolio__addon-eye" data-reveal>
+            <div class="eye">
+                <div class="eye__wrapper" data-eye>
+                    <div class="eye__iris green">
+                        <div class="eye__lens"></div>
                     </div>
                 </div>
             </div>
         </div>
-        <div class="portfolio__addon-2" data-reveal>
-            <img src="img/blog-guy-3.png">
+        <div class="portfolio__addon-guy" data-reveal>
+            <img src="_static/images/people/hero-guy-4.png">
         </div>
     </div>
 
