--- a/src/html/preloader.html
+++ b/src/html/preloader.html
@@ -1,5 +1,5 @@
 
 <div class="loading" data-loading>
-  <img alt="loading" class="img" height="55" src="img/logo-light.png" width="55">
-  <img src="img/loading-circle.svg" width="70" height="70" alt="" class="circle">
+  <img alt="loading" class="img" height="55" src="_static/images/logo/logo-light.png" width="55">
+  <img src="_static/images/loading-circle.svg" width="70" height="70" alt="" class="circle">
 </div>
