--- a/src/html/skills.html
+++ b/src/html/skills.html
@@ -43,14 +43,14 @@
               </div>
           </div>
           <div class="skills__wrapper-section" data-reveal>
-              <img src="img/skills-image1.png">
+              <img src="_static/images/skills.png">
           </div>
       </div>
-      <div class="skills__addon-1">
-          <div class="eye-wrapper" data-reveal>
-              <div class="eye" data-eye>
-                  <div class="eye-iris">
-                      <div class="eye-lens"></div>
+      <div class="skills__addon-eye" data-reveal>
+          <div class="eye">
+              <div class="eye__wrapper" data-eye>
+                  <div class="eye__iris">
+                      <div class="eye__lens"></div>
                   </div>
               </div>
           </div>
