--- a/src/html/main.html
+++ b/src/html/main.html
@@ -1,14 +1,13 @@
 
-<section class="section hero" id="home" aria-label="home">
+<section class="section main" id="home" aria-label="home">
   <div class="container">
+    <img src="_static/images/gearonix.jpg" width="322" height="322" alt="Gearonix"
+         class="main__banner" data-first-reveal="right">
+    <div class="main__content">
 
-    <img src="img/avatar.jpg" width="322" height="322" alt="Gearonix"
-         class="hero-banner" data-fisrt-reveal="right">
-    <div class="hero-content">
+      <h1 class="h1 main__title" data-first-reveal="left">Uzhanin Egor</h1>
 
-      <h1 class="h1 hero-title" data-fisrt-reveal="left">Uzhanin Egor</h1>
-
-      <div class="wrapper h2" data-fisrt-reveal="left">
+      <div class="wrapper h2" data-first-reveal="left">
         <strong class="strong" data-letter-effect>Frontend</strong>
         <strong class="strong" data-letter-effect>Javascript</strong>
         <strong class="strong" data-letter-effect>React.js</strong>
@@ -17,24 +16,24 @@
         <strong class="strong" data-letter-effect>Typescript</strong>
       </div>
 
-      <p class="hero-text" data-fisrt-reveal="opacity">Web developer</p>
+      <p class="main__text" data-first-reveal="opacity">Web developer</p>
     </div>
-    <div class="hero__contacts" data-fisrt-reveal="left">
-      <div class="hero__contact" data-href="https://github.com/Gearonix">
-        <img src="img/github.svg"/>
+    <div class="main__contacts" data-first-reveal="left">
+      <div class="main__contact" data-href="https://github.com/Gearonix">
+        <img src="_static/images/icons/github.svg"/>
         <h4>Gearonix</h4>
       </div>
 
-      <div class="hero__contact" data-href="https://t.me/gearonixx">
-        <img src="img/telegram.svg"/>
+      <div class="main__contact" data-href="https://t.me/gearonixx">
+        <img src="_static/images/icons/telegram.svg"/>
         <h4>@gearonixx</h4>
       </div>
-      <div class="hero__contact" data-href="mailto://egor.uzhanin@gmail.com">
-        <img src="img/email.svg"/>
+      <div class="main__contact" data-href="mailto://egor.uzhanin@gmail.com">
+        <img src="_static/images/icons/email.svg"/>
         <h4>egor.uzhanin@gmail.com</h4>
       </div>
-      <div class="hero__contact" data-href="https://vk.com/id606417601">
-        <img src="img/vk.svg"/>
+      <div class="main__contact" data-href="https://vk.com/id606417601">
+        <img src="_static/images/icons/vk.svg"/>
         <h4>Uzhanin Egor</h4>
       </div>
 
