refactored project structure

--- a/src/index.html
+++ b/src/index.html
@@ -8,25 +8,25 @@
   <title>Uzhanin Egor</title>
   <meta name="title" content="Uzhanin Egor">
   <meta name="description" content="Web developer.">
-  <link rel="shortcut icon" href="favicon.ico" type='image/x-icon'>
+  <link rel="shortcut icon" href="_static/favicon.ico" type='image/x-icon'>
   <link rel="stylesheet" href="_static/font/font.css">
   <link rel="stylesheet" href="_static/index.min.css">
 </head>
 
 <body class="active" id="top">
   <div id="root">
-    @@include('html/preloader.html')
-    @@include('html/header.html')
-    @@include('html/navbar.html')
+    @@include('preloader/preloader.html')
+    @@include('header/header.html')
+    @@include('navbar/navbar.html')
     <main>
       <article>
-        @@include('html/main.html')
+        @@include('main/main.html')
       </article>
     </main>
-    @@include('html/about.html')
-    @@include('html/skills.html')
-    @@include('html/portfolio.html')
-    @@include('html/footer.html')
+    @@include('about/about.html')
+    @@include('skills/skills.html')
+    @@include('portfolio/portfolio.html')
+    @@include('footer/footer.html')
     <a class="back-top-btn" data-back-top-btn data-href="#home">0%</a>
 
     <div class="cursor disabled" data-cursor></div>
