working on responsive design

--- a/src/sections/about/about.html
+++ b/src/sections/about/about.html
@@ -13,9 +13,9 @@
 
         <p class="section-text">
           I'm a self-taught <em class="em">Front-End Developer</em>
-          located in <em class="em">Moscow</em> region.
-          Creating scalable, performance optimized <em class="em">web applications</em>
-          and some other cool stuff for web with good UX and modern standards.
+          located in <em class="em">Moscow</em> region. Creating scalable,<br/>
+          performance optimized <em class="em">web applications</em> <br/>
+          and some other cool stuff for web with good UX and modern standards. <br/>
           Use <em class="em">modern tech</em> such as Next.js, Typescript, Styled-Components.
         </p>
 
