--- a/src/sections/header/header.html
+++ b/src/sections/header/header.html
@@ -2,7 +2,7 @@
   <div class="container">
 
     <a data-href="#home" class="logo">
-      <img height="40" src="_static/images/logo/logo-dark.png" width="40">
+      <img src="_static/images/logo/logo-dark.png">
     </a>
 
     <div class="header__buttons">
