--- a/src/sections/navbar/navbar.html
+++ b/src/sections/navbar/navbar.html
@@ -19,6 +19,10 @@
         </li>
 
         <li>
+            <a data-href="#skills" class="navbar__link" data-nav-close>My Skills</a>
+        </li>
+
+        <li>
             <a data-href="#portfolio" class="navbar__link" data-nav-close>Portfolio</a>
         </li>
 
