--- a/src/sections/skills/skills.html
+++ b/src/sections/skills/skills.html
@@ -1,45 +1,61 @@
-<section class="section skills">
+<section class="section skills" id="skills">
   <div class="container">
-      <h2 class="h2 section-title" id="portfolio-label" data-reveal>My Skills</h2>
-      <p class="section-description" data-reveal>I have been studying
-          web development for over a year. <br/>
+      <h2 class="h2 section-title" data-reveal>My Skills</h2>
+      <p class="section-description" data-reveal>I have been studying web development for over a year. <br/>
           During this time I have used a large number of  <br/> different technologies.</p>
       <div class="skills__wrapper">
           <div class="skills__wrapper-section">
               <h4 class="skills__wrapper-title" data-reveal>Main Tech Stack:</h4>
               <div class="skills__wrapper-block" data-reveal>
-                  <div class="skills__wrapper-icon">React.js</div>
                   <div class="skills__wrapper-icon">Next.js</div>
+                  <div class="skills__wrapper-icon">React.js</div>
                   <div class="skills__wrapper-icon">Typescript</div>
-                  <div class="skills__wrapper-icon">Webpack</div>
                   <div class="skills__wrapper-icon">GitHub</div>
-                  <div class="skills__wrapper-icon">SCSS</div>
-                  <div class="skills__wrapper-icon">Jest</div>
-                  <div class="skills__wrapper-icon">REST API</div>
-                  <div class="skills__wrapper-icon">Loki</div>
-                  <div class="skills__wrapper-icon">Nodejs</div>
-                  <div class="skills__wrapper-icon">HTML5</div>
-                  <div class="skills__wrapper-icon">React-Testing-Library</div>
                   <div class="skills__wrapper-icon">Redux</div>
-                  <div class="skills__wrapper-icon">JSS</div>
+              </div>
+              <h4 class="skills__wrapper-title" data-reveal>Testing, Linting, Bundlers:</h4>
+              <div class="skills__wrapper-block" data-reveal>
+                  <div class="skills__wrapper-icon">Webpack</div>
                   <div class="skills__wrapper-icon">Gulp</div>
-                  <div class="skills__wrapper-icon">Apollo/GraphQL</div>
+                  <div class="skills__wrapper-icon">Jest</div>
+                  <div class="skills__wrapper-icon">Loki</div>
+                  <div class="skills__wrapper-icon">RTL</div>
                   <div class="skills__wrapper-icon">Storybook</div>
-                  <div class="skills__wrapper-icon">Ant Design</div>
-                  <div class="skills__wrapper-icon">RTK Query</div>
-                  <div class="skills__wrapper-icon">Socket.io</div>
                   <div class="skills__wrapper-icon">Eslint</div>
                   <div class="skills__wrapper-icon">Stylelint</div>
-                  <div class="skills__wrapper-icon">i18n</div>
-                  <div class="skills__wrapper-icon">SSR</div>
+                  <div class="skills__wrapper-icon">Prettier</div>
               </div>
-                  <h4 class="skills__wrapper-title" data-reveal>I had some experience with:</h4>
+              <h4 class="skills__wrapper-title" data-reveal>CSS and Stylization:</h4>
+              <div class="skills__wrapper-block" data-reveal>
+                  <div class="skills__wrapper-icon">SCSS</div>
+                  <div class="skills__wrapper-icon">Responsive</div>
+                  <div class="skills__wrapper-icon">JSS</div>
+                  <div class="skills__wrapper-icon">Styled Comp.</div>
+                  <div class="skills__wrapper-icon">Material UI</div>
+                  <div class="skills__wrapper-icon">Ant Design</div>
+                  <div class="skills__wrapper-icon">Tailwind CSS</div>
+              </div>
+              <h4 class="skills__wrapper-title" data-reveal>Tools / Libraries I use:</h4>
+              <div class="skills__wrapper-block" data-reveal>
+                  <div class="skills__wrapper-icon">Socket.io</div>
+                  <div class="skills__wrapper-icon">React Spring</div>
+                  <div class="skills__wrapper-icon">React Toastify</div>
+                  <div class="skills__wrapper-icon">Axios</div>
+                  <div class="skills__wrapper-icon">React-Oauth</div>
+                  <div class="skills__wrapper-icon">i18n</div>
+                  <div class="skills__wrapper-icon">pnpm</div>
+                  <div class="skills__wrapper-icon">yarn</div>
+              </div>
+                  <h4 class="skills__wrapper-title" data-reveal>I had experience with:</h4>
               <div class="skills__wrapper-block" data-reveal>
                   <div class="skills__wrapper-icon">Nest.js</div>
                   <div class="skills__wrapper-icon">MongoDB</div>
                   <div class="skills__wrapper-icon">MySQL</div>
                   <div class="skills__wrapper-icon">Express</div>
                   <div class="skills__wrapper-icon">TypeORM</div>
+                  <div class="skills__wrapper-icon">Apollo</div>
+                  <div class="skills__wrapper-icon">GraphQL</div>
+                  <div class="skills__wrapper-icon">RTK Query</div>
               </div>
           </div>
           <div class="skills__wrapper-section" data-reveal>
